--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ahmed-factorial",
   "version": "1.0.4",
-  "description": "basic npx tool for learning",
+  "description": "This package is a npx tool to find factorials of integers.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
